--- a/settings.toml
+++ b/settings.toml
@@ -9,17 +9,21 @@ packs = [
 ]
 options = 3
 
+[cache]
+size = 256
+ttl = 86400
+
 [messages]
-start = '''Бот для адпраўкі выпадковых стыкераў. Ўвядзіце /help для атрымання спісу каманд.
-Папярэджанне! Аўтар не ведае беларускай мовы. Калі вы знойдзеце памылкі, калі ласка звяжыцеся з аўтарам.
+start = '''Бот для адпраўкі выпадковых стыкераў. Увядзіце /help для атрымання спісу каманд.
+Папярэджанне! Аўтар не ведае беларускай мовы. Калі вы знойдзеце памылкі, калі ласка, звяжыцеся з аўтарам:
 @istimaldar istimaldar@gmail.com
 Або стварыце иш'ю / PR ў рэпазіторыі праекта.'''
 help = '''Бот для адпраўкі выпадковых стыкераў.
-Бот выкарыстоўваецца ў інлайн рэжыме. Каб адправіць выпадковы стыкер, напішыце @rndstsnd ў патрэбным дыялогу.
+Бот выкарыстоўваецца ў інлайн рэжыме. Каб адправіць выпадковы стыкер, напішыце @rndstsnd_bot у патрэбным дыялогу.
 Спіс каманд у звычайным рэжыме:
 /start - Выводзіць базавую інфармацыю аб боце
 /help - Выводзіць інфармацыю аб выкарыстанні бота
 /privacy - Паказвае палітыку прыватнасці'''
 privacy = '''Бот не выкарыстоўвае і не захоўвае ніякіх дадзеных юзэра.'''
 unknown = '''Невядомая каманда.
-Ўвядзіце /help для атрымання спісу каманд.'''
+Увядзіце /help для атрымання спісу каманд.'''
